Add basic site structure for CM Trade Services

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>CM Trade Services</title>
+  <title>Contact Us - CM Trade Services</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +19,11 @@
     <h1>CM Trade Services</h1>
   </header>
   <main>
-    <h2>Welcome to CM Trade Services 🙂</h2>
+    <form action="mailto:cmann1970@gmail.com" method="post" enctype="text/plain">
+      <label for="message">Type your enquiry:</label>
+      <textarea id="message" name="message"></textarea>
+      <button type="submit">Send Enquiry</button>
+    </form>
   </main>
 </body>
 </html>
