--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>CM Trade Services</title>
+  <title>Gallery - CM Trade Services</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +19,7 @@
     <h1>CM Trade Services</h1>
   </header>
   <main>
-    <h2>Welcome to CM Trade Services 🙂</h2>
+    <p>Coming soon…</p>
   </main>
 </body>
 </html>
