Use HTTPS endpoint for contact form

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
     <h1>CM Trade Services</h1>
   </header>
   <main>
-    <form action="mailto:cmann1970@gmail.com" method="post" enctype="text/plain">
+    <form action="https://formsubmit.co/cmann1970%40gmail.com" method="POST">
       <label for="message">Type your enquiry:</label>
       <textarea id="message" name="message"></textarea>
       <button type="submit">Send Enquiry</button>
