--- a/index.html
+++ b/index.html
@@ -2,24 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>CM Trade Services</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+  <meta http-equiv="refresh" content="0; url=Home/">
+  <title>Redirecting...</title>
 </head>
 <body>
-  <header>
-    <h1>CM Trade Services</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="gallery.html">Gallery</a>
-      <a href="contact.html">Contact Us</a>
-    </nav>
-  </header>
-  <main>
-    <h2>Welcome to CM Trade Services 🙂</h2>
-  </main>
+  <p>If you are not redirected, <a href="Home/">click here</a>.</p>
 </body>
 </html>
