--- a/index.html
+++ b/index.html
@@ -2,10 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=Home/">
+  <meta http-equiv="refresh" content="0; url=/Home/">
   <title>Redirecting...</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <p>If you are not redirected, <a href="Home/">click here</a>.</p>
+  <header>
+    <h1>CM Trade Services</h1>
+    <nav>
+      <a href="/Home/">Home</a>
+      <a href="/Gallery/">Gallery</a>
+      <a href="/Contact/">Contact Us</a>
+    </nav>
+  </header>
+  <main>
+    <p>If you are not redirected, <a href="/Home/">click here</a>.</p>
+  </main>
 </body>
 </html>
