--- a/Home/index.html
+++ b/Home/index.html
@@ -19,7 +19,18 @@
     </nav>
   </header>
   <main>
-    <h2>Welcome to CM Trade Services 🙂</h2>
+    <div class="home-content">
+      <h2>Welcome to CM Trade Services</h2>
+      <h3>Plumbing &amp; Heating Specialists</h3>
+      <p>For all your plumbing requirements</p>
+      <p>Over 30 years experience in kitchen/bathroom refit, heating and property maintenance</p>
+      <p><strong>Chris Mann</strong><br>Plumbing and heating engineer</p>
+      <p>Instagram: <a href="https://instagram.com/manny19701">instagram.com/manny19701</a></p>
+      <p>Call: <a href="tel:07904905140">07904 905140</a><br>Email: <a href="mailto:cmann1970@gmail.com">cmann1970@gmail.com</a></p>
+      <p>To see more of our work, visit the gallery or follow us on:</p>
+      <p>Facebook: <a href="https://www.facebook.com/cmtradeservices">www.facebook.com/cmtradeservices</a></p>
+      <p>Based in West Suffolk - Covering West Suffolk and surrounding regions.</p>
+    </div>
   </main>
 </body>
 </html>
